<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.investment.InvestmentResultFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtLabelResultSimulate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/result_value"
        app:layout_constraintTop_toBottomOf="@id/txtLabelResultSimulate"
        tools:text="R$ 1.088,69" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/total_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_income"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/txtValue" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/total_income"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/button_simulate_again"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded"
        android:layout_marginBottom="@dimen/margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>