<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_content"
    tools:context=".view.investment.InvestmentFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/applyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_mutch_apply"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/applyLabel"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_end_investment"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/apply"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dateLabel"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/percentageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_end_investment"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/date"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/percentageLabel"/>
    
    <android.support.v7.widget.AppCompatButton
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/button_simulate"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>